# Dicom-Tools-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
scripts/: build_deps.sh
src/: main.cpp
src/cli/: CLIOptions.h  CLIParser.cpp  CLIParser.h  CommandRegistry.cpp  CommandRegistry.h
src/modules/DCMTK/: DCMTKFeatureActions.cpp  DCMTKFeatureActions.h  DCMTKTestInterface.h  DCMTKTests.cpp  TagModification.cpp
src/modules/GDCM/: GDCMFeatureActions.cpp  GDCMFeatureActions.h  GDCMTestInterface.h  GDCMTests.cpp  TagInspection.cpp
src/modules/ITK/: CannyEdge.cpp  ITKFeatureActions.cpp  ITKFeatureActions.h  ITKTestInterface.h  ITKTests.cpp
src/modules/VTK/: ImageExport.cpp  VTKFeatureActions.cpp  VTKFeatureActions.h  VTKTestInterface.h  VTKTests.cpp
src/utils/: FileSystemUtils.cpp  FileSystemUtils.h
tests/: run_all.py
